--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".FireApp"
+        >
+        <activity android:name=".View.LoginActivity"></activity>
         <activity android:name=".View.PotionActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
